[package]
name = "voxel-engine-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
noise = "0.8.2"
crossbeam-channel = "0.5.5"
bevy_mod_raycast = "0.13"
