[package]
name = "voxel-engine-bevy"
version = "0.1.0"
edition = "2021"
license = "MIT AND Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
noise = "0.9.0"
crossbeam-channel = "0.5.13"
bevy_mod_raycast = "0.18"
